--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "dotenv": "^8.2.0",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.5.1",
     "serve-static": "^1.13.1"
