--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Lutfi Qaraman",
   "license": "ISC",
   "dependencies": {
+    "angular-route": "^1.7.9",
     "body-parser": "^1.18.2",
     "dotenv": "^8.2.0",
     "express": "^4.16.2",
